working | adding logs and connecting all the continers in the docker compose via network